--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(strict_diag)
 export(strict_drop)
 export(strict_sample)
 export(strict_sapply)
+export(strict_square_bracket)
 import(rlang)
