--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,9 @@ LazyData: true
 Imports:
     rlang,
     crayon
-RoxygenNote: 6.0.1
+RoxygenNote: 7.3.2
 URL: https://github.com/hadley/strict
 BugReports: https://github.com/hadley/strict/issues
 Suggests: testthat,
     covr
+Roxygen: list(markdown = TRUE)
