--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,9 @@ Imports:
     rlang,
     crayon
 RoxygenNote: 7.3.2
-URL: https://github.com/hadley/strict
+URL: https://github.com/hadley/strict, https://hadley.github.io/strict/
 BugReports: https://github.com/hadley/strict/issues
 Suggests: testthat,
     covr
 Roxygen: list(markdown = TRUE)
+Config/Needs/website: tidyverse/tidytemplate
