--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Imports:
 RoxygenNote: 7.3.2
 URL: https://github.com/hadley/strict, https://hadley.github.io/strict/
 BugReports: https://github.com/hadley/strict/issues
-Suggests: testthat,
+Suggests: 
+    testthat (>= 3.0.0),
     covr
 Roxygen: list(markdown = TRUE)
 Config/Needs/website: tidyverse/tidytemplate
+Config/testthat/edition: 3
