--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,22 +5,22 @@ Authors@R: c(
     person("Hadley", "Wickham", , "hadley@posit.co", role = c("aut", "cre")),
     person("Posit Software, PBC", role = c("cph", "fnd"))
   )
-Description: This packages tweaks the operation of base R code to make 
-  things a little stricter.
+Description: This packages tweaks the operation of base R code to make
+    things a little stricter.
 License: GPL-3
-Encoding: UTF-8
-LazyData: true
-Imports:
-    rlang,
-    crayon
-RoxygenNote: 7.3.2
 URL: https://github.com/hadley/strict, https://hadley.github.io/strict/
 BugReports: https://github.com/hadley/strict/issues
-Suggests: 
-    testthat (>= 3.0.0),
-    covr
-Roxygen: list(markdown = TRUE)
-Config/Needs/website: tidyverse/tidytemplate
-Config/testthat/edition: 3
 Depends: 
     R (>= 4.1)
+Imports:
+    crayon,
+    rlang
+Suggests: 
+    covr,
+    testthat (>= 3.0.0)
+Config/Needs/website: tidyverse/tidytemplate
+Config/testthat/edition: 3
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
