--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,19 +2,26 @@ Package: strict
 Title: Make R Just a Little Stricter
 Version: 0.0.0.9000
 Authors@R: c(
-    person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
-    person("RStudio", role = "cph")
+    person("Hadley", "Wickham", , "hadley@posit.co", role = c("aut", "cre")),
+    person("Posit Software, PBC", role = c("cph", "fnd"), comment = c(ROR = "03wc8by49"))
   )
-Description: This packages tweaks the operation of base R code to make 
-  things a little stricter.
-License: GPL-3
+Description: This packages tweaks the operation of base R code to make
+    things a little stricter.
+License: MIT + file LICENSE
+URL: https://github.com/hadley/strict, https://hadley.github.io/strict/
+BugReports: https://github.com/hadley/strict/issues
+Depends: 
+    R (>= 4.1)
+Imports:
+    crayon,
+    rlang
+Suggests: 
+    covr,
+    testthat (>= 3.0.0)
+Config/Needs/website: tidyverse/tidytemplate
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-Imports:
-    rlang,
-    crayon
-RoxygenNote: 6.0.1
-URL: https://github.com/hadley/strict
-BugReports: https://github.com/hadley/strict/issues
-Suggests: testthat,
-    covr
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
+Config/usethis/last-upkeep: 2025-05-26
